minor optimizations / fixes